--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "laravel-vite-plugin": "^1.0",
         "lucide-vue-next": "^0.468.0",
         "reka-ui": "^2.2.0",
+        "sweetalert2": "^11.22.2",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
